The svg alignment fix to end all svg alignment fixes

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -31,9 +31,11 @@ h4
     font-weight: 400
 
 i
+    font-family: Arial
     line-height: 1
     vertical-align: middle
 
     svg
         height: 1em
         width: auto
+        overflow: visible !important
